style(waybar): fix temperature critical color contrast

--- a/modules/home-manager/desktop/waybar/style.css
+++ b/modules/home-manager/desktop/waybar/style.css
@@ -57,6 +57,7 @@
 
 #temperature.critical {
   background-color: #ffffff;
+  color: #000;
 }
 
 #battery.charging {
